force-app/main/default/objects/Receipt__c/fields/Amount_in_Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Foreign_Currency__c</fullName>
    <label>Amount in Foreign Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>