force-app/main/default/objects/Receipt__c/fields/AmountToWords__c.field-meta.xml
<CustomField>
    <fullName>AmountToWords__c</fullName>
    <label>AmountToWords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>