force-app/main/default/objects/Receipt__c/fields/BillDesk__c.field-meta.xml
<CustomField>
    <fullName>BillDesk__c</fullName>
    <label>BillDesk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>