force-app/main/default/objects/Receipt__c/fields/Billdesk_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Billdesk_Order_Id__c</fullName>
    <label>Billdesk Order Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>