force-app/main/default/objects/Receipt__c/fields/BillDesk_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>BillDesk_Payment_Mode__c</fullName>
    <label>BillDesk Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>