force-app/main/default/objects/Receipt__c/fields/Booking_Id_with_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id_with_Timestamp__c</fullName>
    <label>Booking Id with Timestamp</label>
    <length>200</length>
    <type>Text</type>
</CustomField>