force-app/main/default/objects/Receipt__c/fields/Cheque_DD__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD__c</fullName>
    <label>Cheque/DD No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>