force-app/main/default/objects/Receipt__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indian Rupee</fullName>
            </value>
            <value>
                <fullName>US Dollar</fullName>
            </value>
            <value>
                <fullName>UK Pound</fullName>
            </value>
            <value>
                <fullName>Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>Dubai Dirham</fullName>
            </value>
            <value>
                <fullName>Australian Dollar</fullName>
            </value>
            <value>
                <fullName>Singapore Dollar</fullName>
            </value>
            <value>
                <fullName>Kuwaiti Dinar</fullName>
            </value>
            <value>
                <fullName>Bahrain Dinar</fullName>
            </value>
            <value>
                <fullName>Saudi Riyal</fullName>
            </value>
            <value>
                <fullName>Japanese Yen</fullName>
            </value>
            <value>
                <fullName>Chinese Yuan</fullName>
            </value>
            <value>
                <fullName>Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>European Euro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>