force-app/main/default/objects/Receipt__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI</label>
    <referenceTo>RW_EOI__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>