force-app/main/default/objects/Receipt__c/fields/Foreign_Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Currency_Type__c</fullName>
    <label>Foreign Currency Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>