force-app/main/default/objects/Receipt__c/fields/Pay_Plan__c.field-meta.xml
<CustomField>
    <fullName>Pay_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Plan</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Standard_Pay_Plan_Header__c.Project__r.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>