force-app/main/default/objects/Receipt__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <label>Payment Gateway</label>
    <length>50</length>
    <type>Text</type>
</CustomField>