force-app/main/default/objects/Receipt__c/fields/Payment_Gateway_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway_Response_Code__c</fullName>
    <label>BillDesk Response Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>