force-app/main/default/objects/Receipt__c/fields/Print_Cheque_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Print_Cheque_Bounce__c</fullName>
    <formula>IF( ISPICKVAL(Receipt_Status__c, &quot;Dishonored&quot;), HYPERLINK(&quot;apex/S_ChequeBouncePrint?receiptId=&quot;+Id+&quot;&amp;letterHead=false&quot;,&quot;Click Here&quot; ), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Cheque Bounce</label>
    <type>Text</type>
</CustomField>