force-app/main/default/objects/Receipt__c/fields/Print_Cheque_Bounce_on_LetterHead__c.field-meta.xml
<CustomField>
    <fullName>Print_Cheque_Bounce_on_LetterHead__c</fullName>
    <formula>IF( ISPICKVAL(Receipt_Status__c, &quot;Dishonored&quot;), HYPERLINK(&quot;apex/S_ChequeBouncePrint?receiptId=&quot;+Id+&quot;&amp;letterHead=true&quot;,&quot;Click Here&quot; ), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Cheque Bounce [on LetterHead]</label>
    <type>Text</type>
</CustomField>