force-app/main/default/objects/Receipt__c/fields/Print_Receipt_On_Letterhead__c.field-meta.xml
<CustomField>
    <fullName>Print_Receipt_On_Letterhead__c</fullName>
    <formula>HYPERLINK(&quot;/apex/S_PrintReceipt?id=&quot;+Id+&quot;&amp;letterhead=&quot;+&apos;1&apos;,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Receipt On Letterhead</label>
    <type>Text</type>
</CustomField>