force-app/main/default/objects/Receipt__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <formula>(Project__r.RDS_Short_Name__c) &amp; &apos;/&apos; &amp; Left( Project_Unit__r.TowerName__r.Name ,2) &amp; &apos;-&apos; &amp; Project_Unit__r.Name &amp; &apos;/&apos; &amp; TEXT(Receipt_Date__c) &amp; &apos;/&apos; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Number</label>
    <type>Text</type>
</CustomField>