force-app/main/default/objects/Receipt__c/fields/Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Status__c</fullName>
    <label>Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UnProcessed</fullName>
                <default>true</default>
                <label>UnProcessed</label>
            </value>
            <value>
                <fullName>Processed-Finance Submission Pending</fullName>
            </value>
            <value>
                <fullName>Processed-Sent for Banking</fullName>
            </value>
            <value>
                <fullName>Dishonored</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Physical Verification Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>