force-app/main/default/objects/Receipt__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remarks</label>
    <type>Checkbox</type>
</CustomField>