force-app/main/default/objects/Receipt__c/fields/RW_Digital_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>RW_Digital_Payment_Mode__c</fullName>
    <label>Digital Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>