force-app/main/default/objects/Receipt__c/fields/RW_Payment_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Collection_Type__c</fullName>
    <label>Payment Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI</fullName>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Customer Portal - Outstanding</fullName>
            </value>
            <value>
                <fullName>SAP Demands</fullName>
            </value>
            <value>
                <fullName>Customer Portal - Flat Cost</fullName>
            </value>
            <value>
                <fullName>Customer Portal - GST</fullName>
            </value>
            <value>
                <fullName>SAP Demands - Flat Cost</fullName>
            </value>
            <value>
                <fullName>SAP Demands - GST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>