force-app/main/default/objects/Receipt__c/fields/RW_Payment_Refunded__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Refunded?</label>
    <type>Checkbox</type>
</CustomField>