force-app/main/default/objects/Receipt__c/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <formula>Opportunity__r.SAP_Customer_Number__c</formula>
    <label>SAP Customer Number</label>
    <type>Text</type>
</CustomField>