force-app/main/default/objects/Receipt__c/fields/Standard_Customer_Pay_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Standard_Customer_Pay_Plan_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Customer Pay Plan Detail</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Standard_Customer_Pay_Plan_Detail__c.Customer_Pay_Plan_Header__r.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Adjustment_Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Standard_Customer_Pay_Plan_Detail__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>