force-app/main/default/objects/Receipt__c/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <formula>Project_Unit__r.UnitNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit No</label>
    <type>Text</type>
</CustomField>