force-app/main/default/objects/Receipt__c/fields/UTR_Uploaded_For__c.field-meta.xml
<CustomField>
    <fullName>UTR_Uploaded_For__c</fullName>
    <label>UTR Uploaded For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>StampDuty</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>