force-app/main/default/objects/Receipt__c/fields/UTR_Uploaded_From_Lockated_App__c.field-meta.xml
<CustomField>
    <fullName>UTR_Uploaded_From_Lockated_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UTR Uploaded From Lockated App</label>
    <type>Checkbox</type>
</CustomField>