force-app/main/default/objects/Receipt__c/validationRules/Can_not_Approve_without_check_Recieve.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_Approve_without_check_Recieve</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Approval_Status__c  , &quot;Approved&quot;) &amp;&amp;  Physically_Cheque_Received__c = false &amp;&amp;  ISPICKVAL( Mode__c , &quot;Cheque&quot;)</errorConditionFormula>
    <errorMessage>Can not Approve Receipt, Your check has not been received yet.</errorMessage>
</ValidationRule>