force-app/main/default/objects/Receipt__c/validationRules/Cheque_DD_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_DD_date</fullName>
    <active>false</active>
    <errorConditionFormula>Cheque_DD_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Cheque_DD_Date__c</errorDisplayField>
    <errorMessage>Should not be less than today date</errorMessage>
</ValidationRule>