force-app/main/default/objects/Receipt__c/validationRules/Cheque_DD_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cheque_DD_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
 Cheque_DD_Date__c  &gt;  Receipt_Date__c  + 1, 


 Cheque_DD_Date__c  &lt;  Receipt_Date__c -  180 )</errorConditionFormula>
    <errorDisplayField>Cheque_DD_Date__c</errorDisplayField>
    <errorMessage>Cheque DD</errorMessage>
</ValidationRule>