force-app/main/default/objects/Receipt__c/validationRules/Drawee_Bank_if_others_Mnadatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Drawee_Bank_if_others_Mnadatory</fullName>
    <active>false</active>
    <description>If drawee bank is other then drawee bank(if other) field mndatory</description>
    <errorConditionFormula>AND( ISPICKVAL( DraweeBank__c , &apos;Other&apos;) , 
ISBLANK(Drawee_Bank_If_Others__c)||    ISNULL(Drawee_Bank_If_Others__c))</errorConditionFormula>
    <errorMessage>Please Enter Drawee Bank(If Other)</errorMessage>
</ValidationRule>