force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Draft_Rupees2.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Draft_Rupees2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Draft/Pay Order&apos;) , ISPICKVAL( Mode_Selection__c , &apos;Rupees&apos;) ,  ISBLANK(Cheque_DD_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Cheque_DD_Date__c</errorDisplayField>
    <errorMessage>After Selecting Draft/Pay Order of Mode PickList and Rupees of Mode Selection Pick List,Cheque/DD Date cann&apos;t be blank.</errorMessage>
</ValidationRule>