force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Draft_Rupees4.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Draft_Rupees4</fullName>
    <active>true</active>
    <description>When User SelectDraft/Pay Order of Mode PickList and Rupees of Mode Selection then not entering data in Cheque/DD Amount (Rs.)</description>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Draft/Pay Order&apos;) , ISPICKVAL( Mode_Selection__c , &apos;Rupees&apos;) , ISBLANK(  Cheque_DD_Amount_Rs__c  ) )</errorConditionFormula>
    <errorDisplayField>Cheque_DD_Amount_Rs__c</errorDisplayField>
    <errorMessage>After Selecting Draft/Pay Order of Mode PickList and Rupees of Mode Selection Pick List,Cheque/DD Amount (Rs.)	 cann&apos;t be blank.</errorMessage>
</ValidationRule>