force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Local_Ch_Forex2.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Local_Ch_Forex2</fullName>
    <active>true</active>
    <description>When User Select  Local Cheque of Mode PickList and Forex of Mode Selection then not entering data in Cheque/DD Date</description>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Local Cheque&apos;) , ISPICKVAL( Mode_Selection__c , &apos;Forex&apos;) , ISBLANK( Cheque_DD_Date__c  ) )</errorConditionFormula>
    <errorDisplayField>Cheque_DD_Date__c</errorDisplayField>
    <errorMessage>After Selecting Local Cheque of Mode PickList and Forex of Mode Selection Pick List,Cheque/DD Date cann&apos;t be blank.</errorMessage>
</ValidationRule>