force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Local_Ch_Forex4.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Local_Ch_Forex4</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Local Cheque&apos;) , ISPICKVAL( Mode_Selection__c , &apos;Forex&apos;) ,  ISBLANK( FOREX__c )  )</errorConditionFormula>
    <errorDisplayField>FOREX__c</errorDisplayField>
    <errorMessage>After Selecting Local Cheque of Mode PickList and Forex of Mode Selection Pick List,Forex Amount cann&apos;t be blank.</errorMessage>
</ValidationRule>