force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Local_Ch_Rupee4.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Local_Ch_Rupee4</fullName>
    <active>true</active>
    <description>When User Select  Local Cheque of Mode PickList and Rupees of Mode Selection then not entering data in Forex Amount</description>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Local Cheque&apos;) , ISPICKVAL( Mode_Selection__c , &apos;Rupees&apos;) , ISBLANK(  FOREX__c  ) )</errorConditionFormula>
    <errorDisplayField>FOREX__c</errorDisplayField>
    <errorMessage>After Selecting Local Cheque of Mode PickList and Rupees of Mode Selection Pick List,Forex Amount cann&apos;t be blank.</errorMessage>
</ValidationRule>