force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Outsta_Ch_fore4.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Outsta_Ch_fore4</fullName>
    <active>true</active>
    <description>When User Select Outstation Cheque of Mode PickList and Forex of Mode Selection then not entering data in Forex Amount</description>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Outstation Cheque&apos;) , ISPICKVAL( Mode_Selection__c,&apos;Forex&apos;) , ISBLANK(  FOREX__c  ) )</errorConditionFormula>
    <errorDisplayField>FOREX__c</errorDisplayField>
    <errorMessage>After Selecting Outstation Cheque of Mode PickList and Forex of Mode Selection Pick List,Forex Amount cann&apos;t be blank.</errorMessage>
</ValidationRule>