force-app/main/default/objects/Receipt__c/validationRules/Mandatory_Validation_for_Outsta_Ch_Rupe1.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Validation_for_Outsta_Ch_Rupe1</fullName>
    <active>true</active>
    <description>When User Select Outstation Cheque of Mode PickList and Rupees of Mode Selection then not entering data in Cheque/DD No.</description>
    <errorConditionFormula>AND( ISPICKVAL( Mode__c , &apos;Outstation Cheque&apos;) , ISPICKVAL( Mode_Selection__c,&apos;Rupees&apos;) , ISBLANK(  Cheque_DD__c  ) )</errorConditionFormula>
    <errorDisplayField>Cheque_DD__c</errorDisplayField>
    <errorMessage>After Selecting Outstation Cheque of Mode PickList and Rupees of Mode Selection Pick List,Cheque/DD No. cann&apos;t be blank.</errorMessage>
</ValidationRule>